# pictorial

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
pictorial-rs/: Cargo.toml  build.sh
pictorial-rs/src/: lib.rs
pictorial-rs/src/core/transform/: engine.rs  mod.rs  transform.rs
pictorial-rs/src/core/vector/: mod.rs  types.rs
src/: App.css  App.tsx
src/components/canvas/: Canvas.css  Canvas.tsx  VectorCanvas.tsx
src/components/ui/: ColorPanel.css  ColorPanel.tsx  Toolbar.css  Toolbar.tsx  VirtualizedColorPanel.tsx
src/core/ai/: ColorDiffusionEngine.ts
src/core/collaboration/: CollaborationEngine.ts
src/core/color/: ColorUtils.ts
src/core/commands/: index.ts
src/core/layer/: LayerEngine.ts
src/core/performance/: VirtualizationEngine.ts
src/core/rendering/: CanvasRenderer.ts  WebGLRenderer.ts
src/core/text/: TextEngine.ts
src/core/transform/: TransformEngine.ts
src/core/vector/: SVGEngine.ts  VectorEngine.ts  VectorTypes.ts
src/stores/: AppStore.ts  CanvasStore.ts  ColorStore.ts  EnhancedAppStore.ts  PerformanceStore.ts  VectorStore.ts
src/styles/: global.css
src/workers/: ColorProcessingWorker.ts
